--- a/src/main/resources/templates/fragmentos/navegacion.html
+++ b/src/main/resources/templates/fragmentos/navegacion.html
@@ -11,7 +11,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link active" aria-current="page" href="/">Inicio</a>
-                        <a class="nav-link" href="/agregar">Agregar Contacto</a>
+                        <a class="nav-link" href="/agregar">Agregar Movimiento</a>
 
                     </div>
                 </div>
