--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,7 +39,8 @@
             <td class="text-center" >
                 <div class="container">
                     <a th:href="@{/editar/{id}(id=${movimiento.idMovimiento})}" class="btn btn-warning btn-sm me-3">Editar</a>
-                    <a th:href="@{/eliminar/{id}(id=${movimiento.idMovimiento})}" class="btn btn-danger btn-sm me-3">Eliminar</a>
+                    <a th:href="@{/eliminar/{id}(id=${movimiento.idMovimiento})}" class="btn btn-danger btn-sm me-3"
+                       onclick="confirmarEliminar(event)">Eliminar</a>
                 </div>
             </td>
 
